js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/lib1/JsModuleA.1.kt
@file:JsModule("../js-module-a.mjs")
